--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,13 +12,13 @@
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+            <div class="col-7 col-md-6 my-1">
                 <h1 class="display-4 logo-font text-black">
                     Fine wines direct to your door
                 </h1>
-                <div class="my-5">
+                <div class="my-1">
                     <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3"> <p id="shop-now-text">Shop Now</p></a>
                     </h4>
                 </div>
             </div>
