--- a/templates/allauth/base.html
+++ b/templates/allauth/base.html
@@ -1,5 +1,7 @@
 {% load static %}
 
+<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" >
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -15,9 +17,17 @@
     {% endblock %}
 
     {% block corecss %}
+    <!-- Base Stylesheet -->
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
     <!-- Bootstrap CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     {% endblock %}
+
+    <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     {% block extra_css %}
     {% endblock %}
@@ -27,6 +37,7 @@
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+      <script src="https://kit.fontawesome.com/9367687ed9.js" crossorigin="anonymous"></script>
     {% endblock %}
 
     {% block extra_js %}
@@ -35,8 +46,69 @@
     <title>Oenotrus Online Store {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top"></header>
+    <header id="header" class="container-fluid fixed-top">
+      <div class="row">
+          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+              <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                  <img src="{% static 'oenotrus-logo-small.png' %}">
+              </a>
+          </div>
+          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+              <form method="GET" action="">
+                  <div class="input-group w-100">
+                      <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                      <div class="input-group-append">
+                          <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                              <span class="icon">
+                                  <i class="fas fa-search"></i>
+                              </span>
+                          </button>
+                      </div>
+                  </div>
+              </form>
+          </div>
+          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+              <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                  <li class="list-inline-item dropdown">
+                      <a class="text-black nav-link" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <div class="text-center">
+                              <div><i class="fas fa-user fa-lg"></i></div>
+                              <p class="my-2">My Account</p>
+                          </div>
+                      </a>
+                      <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                          {% if request.user.is_authenticated %}
+                              {% if request.user.is_superuser %}
+                                  <a href="" class="dropdown-item">Product Management</a>
+                              {% endif %}
+                              <a href="" class="dropdown-item">My Profile</a>
+                              <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                          {% else %}
+                              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                          {% endif %}
+                      </div>
+                  </li>
+                  <li class="list-inline-item">
+                      <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                          <div class="text-center">
+                              <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                              <p class="my-2">
+                                  {% if grand_total %}
+                                      ${{ grand_total|floatformat:2 }}
+                                  {% else %}
+                                      $0.00
+                                  {% endif %}
+                              </p>
+                          </div>
+                      </a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </header>
 
+    
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
