--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-1">
+            <div class="col-7 col-md-6 my-5 pt-5">
                 <h1 class="display-4 logo-font text-black">
                     Fine wines direct to your door
                 </h1>
