--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
                 </h1>
                 <div class="my-1">
                     <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3"> <p id="shop-now-text">Shop Now</p></a>
+                        <a href="{% url 'wines' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3"> <p id="shop-now-text">Shop Now</p></a>
                     </h4>
                 </div>
             </div>
