--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,7 +8,7 @@
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item ">By Rating</a>
                 <a href="" class="dropdown-item ">By Region</a>
-                <a href="" class="dropdown-item">All Wines</a>
+                <a href="{% url 'wines' %}" class="dropdown-item">All Wines</a>
             </div>
         </li>
 
