--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,7 @@ html {
     height: 100%;
 }
 
-.homepage-body {
+body {
     background: url('/static/wine-background-image.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
@@ -11,12 +11,6 @@ html {
     padding-top: 100px;
 }
 
-body {
-    height: calc(100vh - 164px);
-    color: #555;
-    font-family: 'Montserrat';
-    padding-top: 100px;
-}
 #header {
     position:absolute;
     background-color: #fafafa;
@@ -83,6 +77,9 @@ body {
 	z-index: -1;
 }
 
+hr {
+    margin: auto !important;
+}
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
