--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -42,11 +42,11 @@
                                     </td>
                                     <td class = "py-3">
                                         <p class="my-0"><strong>{{ item.product.vintage }}</strong></p>
-                                        <p class="my-0"><strong><em>{{ item.product.name }}, {{ item.product.size }}</em></strong></p>
+                                        <p class="my-0"><strong><em>{{ item.product.name }}</em></strong></p>
                                         <p class="my-0">{{ item.product.country }}, {{ item.product.region }}</p>
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                        <p class="my-0">£{{ item.product.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
                                         <form class="form update-form" method="POST" action="{% url 'adjust_cart' item.item_id %}">
@@ -82,7 +82,7 @@
                                     <td class="py-3">
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">£{{ item.product.price }}</p>
+                                        <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity  }}</p>
                                     </td>
                                 </tr>
                             {% endfor %}
