--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
                       <a class="text-black nav-link" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           <div class="text-center">
                               <div><i class="fas fa-user fa-lg"></i></div>
-                              <p class="my-1">My Account</p>
+                              <p class="my-3">My Account</p>
                           </div>
                       </a>
                       <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -93,7 +93,7 @@
                       <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_cart' %}">
                           <div class="text-center">
                               <div><i class="fas fa-shopping-cart fa-lg"></i></div>
-                              <p class="my-1">
+                              <p class="my-3">
                                   {% if grand_total %}
                                       £{{ grand_total|floatformat:2 }}
                                   {% else %}
@@ -121,13 +121,24 @@
             <h4 class="logo-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</h4>                
         </div>            
     </div>
-</header>
-
-  </header>
-
+    </header>
     
     {% if messages %}
-        <div class="message-container"></div>
+        <div class="my-10 toast message-container">
+            {% for message in messages %}
+            {% with message.level as level %}
+                {% if level == 40 %}
+                    {% include 'includes/toasts/toast_error.html' %}
+                {% elif level == 30 %}
+                    {% include 'includes/toasts/toast_warning.html' %}
+                {% elif level == 25 %}
+                    {% include 'includes/toasts/toast_success.html' %}
+                {% else %}
+                    {% include 'includes/toasts/toast_info.html' %}
+                {% endif %}
+            {% endwith %}
+        {% endfor %}
+        </div>
     {% endif %}
 
     {% block page_header %}
@@ -137,6 +148,10 @@
     {% endblock %}
 
     {% block postloadjs %}
+    <script type="text/javascript">
+        $(document).ready(function(){  $('.toast').toast('show');
+ });
+    </script>
     {% endblock %}
 
 
