--- a/products/templates/products/wine_detail.html
+++ b/products/templates/products/wine_detail.html
@@ -29,7 +29,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ wine.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">${{ wine.price }}</p>
+                    <p class="lead mb-0 text-left font-weight-bold">£{{ wine.price }}</p>
                     {% if wine.rating %}
                         <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ wine.rating }} / 5</small>
                     {% else %}
