--- a/products/templates/products/wines.html
+++ b/products/templates/products/wines.html
@@ -64,7 +64,7 @@
                                 </a>
                                 {% endif %}
                                 <div class="card-body pb-0">
-                                    <p class="mb-0">{{ wine.name }}</p>
+                                    <p class="mb-0">{{ wine.vintage }} {{ wine.name }}, {{ wine.size }}</p>
                                 </div>
                                 <div class="card-footer bg-white pt-0 border-0 text-left">
                                     <div class="row">
