--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -100,7 +100,7 @@
                             </tr>
                             <tr>
                                 <td colspan="5" class="text-right">
-                                    <a href="{% url 'wines' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                    <a href="{% url 'checkout' %}" class="btn btn-outline-black rounded-0 btn-lg">
                                         <span class="icon">
                                             <i class="fas fa-chevron-left"></i>
                                         </span>
