--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,8 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/9367687ed9.js" crossorigin="anonymous"></script>
+      <!-- Stripe -->
+      <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
     {% block extra_js %}
