added admin product edit and delete functionality

--- a/products/templates/products/wines.html
+++ b/products/templates/products/wines.html
@@ -60,7 +60,7 @@
                                 </a>
                                 {% else %}
                                 <a href="{% url 'wine_detail' wine.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ wine.name }}">
+                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}stock-wine-bottle-empty.png" alt="{{ wine.name }}">
                                 </a>
                                 {% endif %}
                                 <div class="card-body pb-0">
@@ -82,6 +82,12 @@
                                             {% else %}
                                                 <small class="text-muted">No Rating</small>
                                             {% endif %}
+                                            {% if request.user.is_superuser %}
+                                            <small class="ml-3">
+                                                <a href="{% url 'edit_wine' wine.id %}">Edit</a> | 
+                                                <a class="text-danger" href="{% url 'delete_wine' wine.id %}">Delete</a>
+                                            </small>
+                                        {% endif %}
                                         </div>
                                     </div>
                                 </div>
