--- a/products/templates/products/wine_detail.html
+++ b/products/templates/products/wine_detail.html
@@ -21,7 +21,7 @@
                         </a>
                         {% else %}
                         <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ wine.name }}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}stock-wine-bottle-empty.png" alt="{{ wine.name }}">
                         </a>
                     {% endif %}
                 </div>
@@ -35,6 +35,12 @@
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+                    {% if request.user.is_superuser %}
+                    <small class="ml-3">
+                        <a href="{% url 'edit_wine' wine.id %}">Edit</a> | 
+                        <a class="text-danger" href="{% url 'delete_wine' wine.id %}">Delete</a>
+                    </small>
+                {% endif %}
                     <p class="mt-3">{{ wine.description }}</p>
                     <form class="form" action="{% url 'add_to_cart' wine.id %}" method="POST">
                         {% csrf_token %}
