--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" >
+<link rel="shortcut icon" type="image/ico" href="{% static 'favicon.ico' %}" >
 
 <!doctype html>
 <html lang="en">
