--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+<link rel="shortcut icon" type="image/ico" href="media/favicon.ico" >
+
 <!doctype html>
 <html lang="en">
   <head>
