added wines to footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -168,7 +168,7 @@
             </div>
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">Products</a>
+                <a href="#!" class="text-white">Wines</a>
               </h6>
             </div>
             <div class="col-md-2">
