--- a/products/templates/products/wine_detail.html
+++ b/products/templates/products/wine_detail.html
@@ -35,6 +35,14 @@
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+                    {% if request.user.is_authenticated %}
+                                    <a class="btn btn-info btn-width mt-3" href="{% url 'add_to_wishlist' wine.id %}">
+                                        <span class="text-uppercase">Add to wishlist</span>
+                                        <span class="icon">
+                                            <i class="fas fa-chevron-right"></i>
+                                        </span> 
+                                    </a>
+                                {% endif %}
                     {% if request.user.is_superuser %}
                     <small class="ml-3">
                         <a href="{% url 'edit_wine' wine.id %}">Edit</a> | 
