--- a/products/templates/products/wine_detail.html
+++ b/products/templates/products/wine_detail.html
@@ -14,17 +14,6 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="image-container my-5">
-                    {% if wine.image %}
-                        <a href="{{ wine.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ wine.image.url }}" alt="{{ wine.name }}">
-                        </a>
-                        {% else %}
-                        <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}stock-wine-bottle-empty.png" alt="{{ wine.name }}">
-                        </a>
-                    {% endif %}
-                </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
@@ -36,10 +25,10 @@
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                     {% if request.user.is_authenticated %}
-                                    <a class="btn btn-info btn-width mt-3" href="{% url 'add_to_wishlist' wine.id %}">
+                                    <a class="" href="{% url 'add_to_wishlist' wine.id %}">
                                         <span class="text-uppercase">Add to wishlist</span>
                                         <span class="icon">
-                                            <i class="fas fa-chevron-right"></i>
+                                            <i class="fas fa-heart"></i>
                                         </span> 
                                     </a>
                                 {% endif %}
