--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -11,6 +11,7 @@
 
 {% block content %}
 	<!-- User WishList Page -->
+    <div class="overlay"></div>
 	<div class="container-fluid large-container">
 		<div class="row">
             <div class="col text-center mt-3">
@@ -19,42 +20,29 @@
             </div>
         </div>
 	<!-- User WishList Items -->
+    
 	{% for product in wishlist.products.all %}
 		<div class="row justify-content-center">
-			<div class="col-12 col-md-6 col-lg-3">
-				<div class="image-container mt-5">
-					{% if product.image %}
-						<a href="{% url 'wine_detail' product.id %}">
-							<img class="card-img-top" src="{{ product.image.url }}" alt=" {{ product.name }}">
-						</a>
-					{% else %}
-						<a href="{% url 'wine_detail' product.id %}">
-							<img class="card-img-top" src="{{ MEDIA_URL }}noimage.png " alt=" {{ product.name }}">
-						</a>
-					{% endif %}
-				</div>
-			</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="products-detail-container my-5">
 					<h3 class="mb-4 pt-md-5 text-black font-weight-bold"> {{ product.name }}</h3>
-					<h4 class="text-black lead mb-2 text-left font-weight-bold">£{{ product.price }}</h4>
 					{% if product.category %}
 					<p class="small">
-						<a class="text-muted text-black font-weight-bold"
-							href="{% url 'wines' %}?category={{ product.category.name }}">
-							<i class="fas fa-hashtag"></i> {{ product.category.friendly_name }}
-						</a>
-					</p>
-					{% endif %}
-				</div>
-				<!-- Buttons -->
-				<div class="text-center">
-					<a class="btn btn-info btn-width mt-3" href="{% url 'wine_detail' product.id %}">
+                        <a class="text-muted text-black font-weight-bold"
+                        href="{% url 'wines' %}?category={{ product.category.name }}">
+                        <i class="fas fa-hashtag"></i> {{ product.category.friendly_name }}
+                        <i class="fas fa-hashtag"></i> {{ product.grape }}
+                    </a>
+                    <br>
+                    <a class="" href="{% url 'wine_detail' product.id %}">
 						<span class="text-uppercase font-weight-bold">Wine Details</span>
 					</a>
-					<a class="btn btn-info btn-width mt-3" href="{% url 'remove_from_wishlist' product.id %}">
+                    <br>
+                    <a class="" href="{% url 'remove_from_wishlist' product.id %}">
 						<span class="text-uppercase font-weight-bold">Remove from wishlist</span>
 					</a>
+					</p>
+					{% endif %}
 				</div>
 			</div>
 		</div>		
