styled missing all auth templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
     <title>Oenotrus Online Store {% block extra_title %}{% endblock %}</title>
   </head>
   <body class="homepage-body">
+    <!-- Main Nav and Search Bar -->
     <header id="header" class="container-fluid fixed-top">
       <div id="topnav" class="row bg-white d-none d-lg-flex">
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
