--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,7 +6,9 @@
 
 {% block inner_content %}
 <hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up" %}</h2>
+<h2 class="mt-5 logo-font mb-4">{% trans "Sign Up" %}
+  For faster checkout, to creat wishlists, and view your order history
+</h2>
 <hr>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
