--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,13 +13,15 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-5 pt-5">
+                <div id="info-cta">
                 <h1 class="display-4 logo-font text-black">
                     Fine wines direct to your door
+                    <div class="my-1">
+                        <h4>
+                            <a href="{% url 'wines' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3"> <p id="shop-now-text">Shop Now</p></a>
+                        </h4>
+                    </div>
                 </h1>
-                <div class="my-1">
-                    <h4>
-                        <a href="{% url 'wines' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3"> <p id="shop-now-text">Shop Now</p></a>
-                    </h4>
                 </div>
             </div>
         </div>
