--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,6 +16,15 @@ body {
     background-color: #fafafa;
 }
 
+#info-cta {
+    background-color: rgba(227, 198, 159, 0.6);
+    text-align: center;
+}
+
+#shop-now-textL:hover {
+    color: #fafafa;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
