--- a/products/templates/products/wine_detail.html
+++ b/products/templates/products/wine_detail.html
@@ -128,7 +128,7 @@
            
         <!-- display comments -->
         <div class="row mt-4 ml-2">
-            {% for review in product.reviews.all %}
+            {% for review in wine.reviews.all %}
             <div class="col-12 col-lg-7">
                 <strong>Ratings:</strong> {{ review.rating }}/5
                 <article>
