--- a/products/templates/products/wine_detail.html
+++ b/products/templates/products/wine_detail.html
@@ -102,7 +102,7 @@
                 <form method="POST" action="{% url 'submit_review' wine.id %}" class="form">
                     {% csrf_token %}
                     <div>                    
-                        <p>Help others by sharing your feedback</p>                    
+                        <p>Help others by sharing your thoughts</p>                    
                         <!-- stars -->
                         <div class="rate">
                             <input type="radio" name="rating" class="rating" id="rating5" value="5"><label for="rating5" title="5"></label>
