--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    {% block extra_css %}
-    {% endblock %}
 
     {% block corejs %}
     <!-- Scripts -->
@@ -160,44 +158,12 @@
     <!-- Footer -->
     <footer class="text-center text-white" style="background-color: #e3c69f">
       <div class="container">
-        <section class="mt-5">
-          <div class="row text-center d-flex justify-content-center pt-5">
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">About us</a>
-              </h6>
-            </div>
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">Wines</a>
-              </h6>
-            </div>
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">Awards</a>
-              </h6>
-            </div>
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">Help</a>
-              </h6>
-            </div>
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">Contact</a>
-              </h6>
-            </div>
-          </div>
-        </section>
         <hr class="my-5" />
         <section class="mb-5">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-8">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                distinctio earum repellat quaerat voluptatibus placeat nam,
-                commodi optio pariatur est quia magnam eum harum corrupti
-                dicta, aliquam sequi voluptate quas.
+                Inspired by the legend of Oenotrus, an ancient Greek who emigrated to southern Italy and gave his name to the region that became known as "Oenotria", or "The Land Of Wine"
               </p>
             </div>
           </div>
