--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div id="hero-container" class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-5 pt-5">
                 <div id="info-cta">
