--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,12 +16,12 @@
                 <div id="info-cta">
                 <h1 class="display-4 logo-font text-black">
                     Fine wines direct to your door
+                </h1>
                     <div class="my-1">
                         <h4>
-                            <a href="{% url 'wines' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3"> <p id="shop-now-text">Shop Now</p></a>
+                            <a href="{% url 'wines' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3" id="shop-now-text"> Shop Now</a>
                         </h4>
                     </div>
-                </h1>
                 </div>
             </div>
         </div>
