--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,6 +5,7 @@
                 Home
             </a>
         </li>
+          <!-- Product Options In Main Navigation -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Wines
