--- a/products/templates/products/wines.html
+++ b/products/templates/products/wines.html
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block content %}
+  <!-- Section that displays all available wines -->
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
@@ -23,6 +24,7 @@
                 <hr class="w-50 mb-1">
             </div>
         </div>
+          <!-- section that allows sorting of available wines displayed -->
         <div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
