--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -9,10 +9,12 @@
       <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
           <form class="form" method="GET" action="{% url 'wines' %}">
               <div class="input-group w-100">
-                  <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                <label for="mobile-search-bar" class="sr-only">Search</label>
+                  <input class="form-control border border-black rounded-0" type="text" name="q" id="mobile-search-bar" placeholder="Search our site">
                   <div class="input-group-append">
                       <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
                           <span class="icon">
+                            <a class="sr-only">Search</a>
                               <i class="fas fa-search"></i>
                           </span>
                       </button>
@@ -47,9 +49,9 @@
               <div><i class="fas fa-shopping-cart fa-lg"></i></div>
               <p class="my-0">
                   {% if grand_total %}
-                      ${{ grand_total|floatformat:2 }}
+                      £{{ grand_total|floatformat:2 }}
                   {% else %}
-                      $0.00
+                      £0.00
                   {% endif %}
               </p>
           </div>
