--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <link rel="shortcut icon" type="image/ico" href="static/favicon.ico" >
+    <link rel="shortcut icon" type="image/ico" href="{% static'favicon.ico' %}" >
 
     <title>Oenotrus Online Store {% block extra_title %}{% endblock %}</title>
   </head>
