--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -200,11 +200,11 @@
                     <span class="text-uppercase">Back to Profile</span>
                 </a>
             {% else %}
-                <a href="{% url 'wines' %}?category=new_arrivals" class="btn btn-black rounded-0 my-2">
+                <a href="{% url 'wines' %}" class="btn btn-black rounded-0 my-2">
                     <span class="icon mr-2">
                         <i class="fas fa-gifts"></i>
                     </span>
-                    <span class="text-uppercase">Now check out our latest arrivals!</span>
+                    <span class="text-uppercase">Return to our full wine list</span>
                 </a>
             {% endif %}
 			</div>
