--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
                               <p class="my-3">My Account</p>
                           </div>
                       </a>
-                      <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                      <div id="account-dropdown" class="dropdown-menu border-0" aria-labelledby="user-options">
                           {% if request.user.is_authenticated %}
                               {% if request.user.is_superuser %}
                                   <a href="{% url 'add_wine' %}" class="dropdown-item">Wine Management</a>
@@ -95,7 +95,7 @@
                       </div>
                   </li>
                   <li class="list-inline-item">
-                      <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_cart' %}">
+                      <a id="cart-icon" class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_cart' %}">
                           <div class="text-center">
                               <div><i class="fas fa-shopping-cart fa-lg"></i></div>
                               <p class="my-3">
