--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -13,8 +13,8 @@
                   <input class="form-control border border-black rounded-0" type="text" name="q" id="mobile-search-bar" placeholder="Search our site">
                   <div class="input-group-append">
                       <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
+                        <p class="sr-only">Search</p>
                           <span class="icon">
-                            <a class="sr-only">Search</a>
                               <i class="fas fa-search"></i>
                           </span>
                       </button>
