--- a/templates/base.html
+++ b/templates/base.html
@@ -61,8 +61,8 @@
                       <input class="form-control border border-black rounded-0" type="text" name="q" id="search-bar" placeholder="search our fine wines">
                       <div class="input-group-append">
                           <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                            <p class="sr-only">Search</p>
                               <span class="icon">
-                                <a class="sr-only">Search</a>
                                   <i class="fas fa-search"></i>
                               </span>
                           </button>
@@ -177,27 +177,27 @@
           </div>
         </section>
         <section class="text-center mb-5">
-          <a href="https://www.facebook.com/" class="text-white me-4 footer-links">
+          <a href="https://www.facebook.com/" class="me-4 footer-links">
             <i class="fab fa-facebook-f"></i>
             <span class="sr-only">Facebook Link</span>
           </a>
-          <a href="https://twitter.com/" class="text-white me-4 footer-links">
+          <a href="https://twitter.com/" class="me-4 footer-links">
             <i class="fab fa-twitter"></i>
             <span class="sr-only">Twitter Link</span>
           </a>
-          <a href="https://www.google.com/" class="text-white me-4 footer-links">
+          <a href="https://www.google.com/" class="me-4 footer-links">
             <i class="fab fa-google"></i>
             <span class="sr-only">Google Link</span>
           </a>
-          <a href="https://www.instagram.com/" class="text-white me-4 footer-links">
+          <a href="https://www.instagram.com/" class="me-4 footer-links">
             <i class="fab fa-instagram"></i>
             <span class="sr-only">Instagram Link</span>
           </a>
-          <a href="https://www.linkedin.com/" class="text-white me-4 footer-links">
+          <a href="https://www.linkedin.com/" class="me-4 footer-links">
             <i class="fab fa-linkedin"></i>
             <span class="sr-only">Linkedin Link</span>
           </a>
-          <a href="https://github.com/" class="text-white me-4 footer-links">
+          <a href="https://github.com/" class="me-4 footer-links">
             <i class="fab fa-github"></i>
             <span class="sr-only">Github Link</span>
           </a>
@@ -210,7 +210,7 @@
            style="background-color: rgba(0, 0, 0, 0.2)"
            >
         © 2024 Copyright:
-        <a class="text-white" href=""
+        <a class="text-white" href="https://oenotrus-b46392d15346.herokuapp.com/"
            >Oenotrus</a
           >
       </div>
