--- a/templates/base.html
+++ b/templates/base.html
@@ -178,27 +178,27 @@
         </section>
         <section class="text-center mb-5">
           <a href="https://www.facebook.com/" class="me-4 footer-links">
-            <i class="fab fa-facebook-f"></i>
+            <i id="facebook-link" class="fab fa-facebook-f"></i>
             <span class="sr-only">Facebook Link</span>
           </a>
           <a href="https://twitter.com/" class="me-4 footer-links">
-            <i class="fab fa-twitter"></i>
+            <i id="twitter-link" class="fab fa-twitter"></i>
             <span class="sr-only">Twitter Link</span>
           </a>
           <a href="https://www.google.com/" class="me-4 footer-links">
-            <i class="fab fa-google"></i>
+            <i id="google-link" class="fab fa-google"></i>
             <span class="sr-only">Google Link</span>
           </a>
           <a href="https://www.instagram.com/" class="me-4 footer-links">
-            <i class="fab fa-instagram"></i>
+            <i id="instagram-link" class="fab fa-instagram"></i>
             <span class="sr-only">Instagram Link</span>
           </a>
           <a href="https://www.linkedin.com/" class="me-4 footer-links">
-            <i class="fab fa-linkedin"></i>
+            <i id="linkedin-link" class="fab fa-linkedin"></i>
             <span class="sr-only">Linkedin Link</span>
           </a>
           <a href="https://github.com/" class="me-4 footer-links">
-            <i class="fab fa-github"></i>
+            <i id="github-link" class="fab fa-github"></i>
             <span class="sr-only">Github Link</span>
           </a>
         </section>
